@@ -13,6 +13,8 @@ Changes for 1.5:
 
 Changes for 1.4.2:
 
+ - more informative report for confiuration script (Eugene)
+ - changed installation directory to '$sbin' (Eudene)
  - fixed "Reset" button for Web screens (Eugene)
  - fixed graph items limitation for IE6 (Eugene)
  - added availability of using spaces for trigger expressions (Eugene)
